<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/nameEt_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:hint="@string/app_fullname"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/emailEt_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:hint="@string/app_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/nolEt_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:hint="@string/app_phonenum"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/PassEt_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/app_password"
            android:inputType="textPassword"
            android:maxLines="1" />
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/cPassEt_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/app_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/signUpBtn_signUpPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_signup"
            android:backgroundTint="@color/cream"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            />


        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_acc"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/signInTv_signUpPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_signin"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>