<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@color/cream">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_titlesignin"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Judul">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:hint="@string/app_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_emailerror"
            android:visibility="gone"
            android:textSize="9sp"
            android:layout_marginTop="5dp"
            tools:ignore="SmallSp"/>

        <EditText
            android:id="@+id/passwordEt"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textSize="15sp"

            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/app_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_passworderror"
            android:visibility="gone"
            android:textSize="9sp"
            android:layout_marginTop="5dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/forgottenPassTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_forgotten"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_login"
            android:backgroundTint="@color/cream"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            android:scrollIndicators="top"
            />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_acc"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/signUpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign Up!"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
