<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.TempatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@color/cream">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <!-- Header Bar -->
    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_profile_1"
        android:contentDescription="@string/profile_icon"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/app_bengkel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_cream"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Search Bar -->
    <EditText
        android:id="@+id/search_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/app_search"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_icon"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill,TextFields" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_icon"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/search_field"
        app:layout_constraintBottom_toBottomOf="@id/search_field"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <!-- Filter Options -->
    <TextView
        android:id="@+id/filter_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_dist"
        android:textSize="16sp"

        app:layout_constraintEnd_toStartOf="@id/filter_popularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <TextView
        android:id="@+id/filter_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pop"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/filter_distance"
        app:layout_constraintStart_toEndOf="@id/filter_distance"
        app:layout_constraintEnd_toStartOf="@id/filter_rating" />

    <TextView
        android:id="@+id/filter_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rate"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/filter_distance"
        app:layout_constraintStart_toEndOf="@id/filter_popularity"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- List of Workshops (Example Workshop Item) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_distance">

        <TextView
            android:id="@+id/workshop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_service"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/workshop_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_dist_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_name" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B28B58"
            android:text="@string/text_pick"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollIndicators="top"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tambahkan layout seperti di atas untuk setiap item bengkel -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/workshop_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_service1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/workshop_distance1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_dist_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_name1" />

        <Button
            android:id="@+id/select_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B28B58"
            android:scrollIndicators="top"
            android:text="@string/text_pick"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="493dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/card_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_cream_no">

            <ImageButton
                android:id="@+id/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/cream"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home" />

            <ImageButton
                android:id="@+id/ChatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/cream"
                app:layout_constraintStart_toEndOf="@+id/HomeButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chat" />

            <ImageButton
                android:id="@+id/ProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/cream"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ChatButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

